# msquant

./: .gitignore  NiceGUI.md  NiceGUI_Advanced_Guide.md  NiceGUI_Core_Concepts.md  README.md  pixi.toml  pyproject.toml
.context/: IMPLEMENTATION_FIXES.md  REBUILD_SUMMARY.md  rebuild-guide.md
.github/workflows/: TESTING.md  ci.yml  docker-publish.yml
docker/: Dockerfile.gpu  docker-compose.yml
src/msquant/: __init__.py
src/msquant/app/: __init__.py  main.py
src/msquant/app/charts/: __init__.py  highcharts.py
src/msquant/app/components/: __init__.py  hf_search_dialog.py  layout.py
src/msquant/app/pages/: __init__.py  configure.py  home.py  monitor.py  results.py
src/msquant/cli/: __init__.py  quantize_run.py
src/msquant/core/: __init__.py
src/msquant/core/monitoring/: __init__.py  gpu_monitor.py
src/msquant/core/quantizer/: __init__.py  config.py  engine.py
src/msquant/services/: __init__.py  huggingface.py  jobs.py  storage.py
tests/: __init__.py  test_sanity.py
