[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msquant"
version = "0.1.0"
description = "Model Quantization Tool with NiceGUI interface"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MSQuant Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "nicegui>=2.0.0",
    "nicegui-highcharts>=0.2.0",
    "vllm>=0.11.0",
    "llmcompressor",
    "transformers>=4.52.0",
    "datasets",
    "accelerate",
    "safetensors",
    "huggingface_hub",
    "hf_transfer",
    "tqdm",
    "pandas>=2.2.0",
    "torch",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pyright>=1.1.380",
    "pytest>=8.1",
    "types-tqdm",
]

[tool.hatch.build.targets.wheel]
packages = ["src/msquant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
